--- a/UI/main.ui
+++ b/UI/main.ui
@@ -164,7 +164,7 @@ QPushButton:hover{
 }</string>
             </property>
             <property name="text">
-             <string>QUITTER</string>
+             <string>DECONNEXION</string>
             </property>
            </widget>
           </item>
@@ -872,7 +872,7 @@ QPushButton:hover{
            </rect>
           </property>
           <property name="currentIndex">
-           <number>23</number>
+           <number>0</number>
           </property>
           <widget class="QWidget" name="page_Acceuil">
            <widget class="QLabel" name="label_3">
